<resources>
    <string name="app_name">铲车圈</string>
    <string name="title_home">买车</string>
    <string name="title_dashboard">发布</string>
    <string name="title_notifications">消息</string>
    <string name="title_user">我的</string>
    <string name="country">全国</string>
    <string name="brand">品牌</string>
    <string name="ageLimit">年限</string>
    <string name="carType">型号</string>
    <string name="order">排序</string>
    <string name="open_drawer">open</string>
    <string name="close_drawer">close</string>


    <string name="app_back">返回</string>
    <string name="app_ok">确定</string>
    <string name="app_cancel">取消</string>
    <string name="app_continue">继续</string>
    <string name="app_tip">提示</string>
    <string name="app_send">发送</string>
    <string name="app_set">设置</string>
    <string name="app_save">保存</string>
    <string name="app_delete">删除</string>
    <string name="app_nextstep">下一步</string>
    <string name="app_prevstep">上一步</string>
    <string name="app_finish">完成</string>
    <string name="app_find">查找</string>
    <string name="app_edit">编辑</string>


    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unsupported">不支持错误</string>
    <string name="errcode_unknown">发送返回</string>


    <string-array name="order_array">
        <item>默认，时间排序</item>
        <item>价格从低到高</item>
        <item>价格从高到低</item>
        <item>年限从近到远</item>
        <item>年限从远到近</item>
        <item>只看有价</item>
    </string-array>
    <string name="title_activity_double_list_dialog">DoubleListDialog</string>
    <string name="title_activity_double_list_adapter">DoubleListAdapter</string>

    <string name="input_hint">发送消息</string>
    <string name="message_click_hint">点击消息事件</string>
    <string name="message_long_click_hint">长按消息事件</string>
    <string name="avatar_click_hint">头像点击事件</string>

    <string name="rationale_record_voice">需要获取麦克风权限来录音</string>
    <string name="rationale_photo">需要获取相册权限</string>
    <string name="rationale_camera">需要获取相机权限</string>
    <string name="wechat_login_ing">登录中...</string>
    <string name="login_success">恭喜，登录成功！</string>

    <!--tst-->
    <string-array name="messages_array">
        <item>How are you</item>
        <item>Fine. And you?</item>
        <item>Me, too. Is there any news today?</item>
        <item>Yep! I got a news here: boom! Tomorrow is the end of The Walking Dead!</item>
        <item>Are you kidding me?</item>
        <item>Absolutely not!</item>
        <item>Jesus, that\'s crazy</item>
        <item>I thought no one would gonna to make it</item>
        <item>That\'s cruel, I don\'t like it, maybe there is a favourable turn</item>
        <item>Hope so</item>
    </string-array>

    <string-array name="conversation">
        <item>test</item>
        <item>History message 1</item>
        <item>History message 2</item>
        <item>History message 3</item>
        <item>History message 4</item>
        <item>History message 5</item>
        <item>History message 6</item>
        <item>History message 7</item>
        <item>History message 8</item>
        <item>History message 9</item>
        <item>History message 10</item>
    </string-array>

    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="pay_success">恭喜！开通会员成功！</string>
    <string name="add_watch">＋ 关注</string>
    <string name="cancel_watch">已关注</string>
</resources>
