<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@mipmap/ccq_banner_1">

        <com.youth.banner.Banner
            android:id="@+id/home_banner"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <include layout="@layout/include_home_action_layout" />
    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <CheckBox
            android:id="@+id/banner_rb_city"
            style="@style/rb_with_arrow_bt"
            android:text="@string/country" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <CheckBox
            android:id="@+id/banner_rb_brand"
            style="@style/rb_with_arrow_bt"
            android:text="@string/brand" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <CheckBox
            android:id="@+id/banner_rb_size"
            style="@style/rb_with_arrow_bt"
            android:text="@string/carType" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <CheckBox
            android:id="@+id/banner_rb_age"
            style="@style/rb_with_arrow_bt"
            android:text="@string/ageLimit" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <CheckBox
            android:id="@+id/banner_rb_order"
            style="@style/rb_with_arrow_bt"
            android:drawableEnd="@drawable/selector_order"
            android:text="@string/order" />


    </LinearLayout>

    <View style="@style/tranversLine" />

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/home_tag_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:flexWrap="wrap"
        android:paddingLeft="16dp">

        <include
            android:id="@+id/tag_province"
            android:visibility="gone"
            layout="@layout/tag_options_layout" />

        <include
            android:id="@+id/tag_brand"
            android:visibility="gone"
            layout="@layout/tag_options_layout" />

        <include
            android:id="@+id/tag_type"
            android:visibility="gone"
            layout="@layout/tag_options_layout" />

        <include
            android:id="@+id/tag_age"
            android:visibility="gone"
            layout="@layout/tag_options_layout" />

        <include
            android:id="@+id/tag_order"
            android:visibility="gone"
            layout="@layout/tag_options_layout" />
    </com.google.android.flexbox.FlexboxLayout>

    <View style="@style/tranversLine" />
</LinearLayout>